fixed navbar and added a transparancy layer to it, adding horizontal scroll for house items on buy page

--- a/css/buy-page.css
+++ b/css/buy-page.css
@@ -1,3 +1,30 @@
+#navbarstyle {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px 15px 0px 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  padding-top: 0px;
+  text-shadow: black 0.2em 0.2em 0.2em;
+}
+
+#navfont {
+  color: white;
+  font-size: 230%;
+  font-weight: bolder;
+}
+
+#navbuttons {
+  font-weight: bolder;
+  font-size: 150%;
+  color: white;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
 .search-banner {
   background-image: url("../img/search-banner.png");
   background-size: 100%;
@@ -206,4 +233,14 @@
 
 .house-card-image-layer4 {
   position: relative !important;
+}
+
+.testimonial-group > .row {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.testimonial-group > .row > .outter-house-cards {
+  display: inline-block;
+  float: none;
 }
