--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -7,6 +7,19 @@ html {
   width: 100%;
 }
 
+#navbarstyle {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px 15px 0px 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  padding-top: 0px;
+  text-shadow: black 0.2em 0.2em 0.2em;
+}
+
 #navfont {
   color: white;
   font-size: 230%;
@@ -21,23 +34,13 @@ html {
   padding-right: 2em;
 }
 
-.navbar.transparent {
-  /* border-width: 0px;
-  -webkit-box-shadow: 0px 0px;
-  box-shadow: 0px 0px;
-  background-color: rgba(0,0,0,0.0);
-  background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
-  background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-  background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%); */
-  background: transparent;
-}
 .jumbotron {
   margin-bottom: 0px;
   background-image: url("../img/revision-background.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0% 25%;
-  padding-top: 0px;
+  padding-top: 5em;
   text-shadow: black 0.2em 0.2em 0.2em;
 }
 
